# coursebot

./: Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  test.py  test2.py  testAI.py
alembic/: env.py
alembic/versions/: 2025_10_07_0559-7a5d6373b39e_init.py  2025_10_07_0721-8160e1b22f2f_add_user_table.py  2025_10_07_1038-ffd6ace48fda_add_tables.py  2025_10_07_1051-f3af17f1e97b_add_tables.py  2025_10_08_0707-357043a8665d_fix_tables.py  2025_10_08_0842-9f94273d17eb_fix_tables.py  2025_10_08_0850-ae3baad52030_fix_tables.py  2025_10_08_0931-d49e6585efc6_fix_tables.py  2025_10_08_1018-f1981fc0a9af_fix_tables.py  2025_10_09_0832-f34341cc3004_fix_tables.py  2025_10_10_0917-83233069f672_add_teacher_url.py  2025_10_12_1512-6c350cad87ab_add_relations_course_schedules.py  2025_10_13_2113-392e2835740a_add_payment.py  2025_10_15_1708-3e31744bccb4_add_utc_column_for_user.py
database/: admin_queries.py  engine.py  models.py  queries.py
filters/: teacher.py
handlers/: __init__.py  admin.py  student.py  teacher.py  user.py
keyboards/: admin_inline.py  inline.py  student_inline.py  teacher_inline.py
middlewares/: redis.py  session.py
redis_storages/: user_cache.py
services/: reminder_generator.py  scheduler.py
services/redis_storages/: user_cache.py
utils/: buttons_enum.py  callbacks.py  enums.py  isAdmin.py  role_enums.py  texts.py  time.py
