[project]
name = "coursesbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.41",
]
